--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "log4js": "^6.9.1",
     "mongodb": "^6.5.0",
     "mongoose": "^5.13.22",
     "path": "^0.12.7"
