--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "log4js": "^6.9.1",
     "mongodb": "^6.5.0",
     "mongoose": "^5.13.22",
-    "path": "^0.12.7"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "sequelize": "^6.37.3"
   }
 }
