--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   },
   "homepage": "https://github.com/Klabsprojects/agaram-api-code#readme",
   "dependencies": {
+    "apicache": "^1.6.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-unless": "^2.1.3",
+    "joi": "^17.13.0",
+    "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "mongodb": "^6.5.0",
     "mongoose": "^5.13.22",
