whatsapp api for all forms

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT = 5500
 DB_URI = mongodb://localhost:27017/agaram
 EXPIRE = '12h'
 JWT_SECRET_KEY = 'agaram@klabs'
+chatwayUsername = 'Indiaklabss'
+chatwayToken = 'Sk42QU00b1lLQ0RQcGxnbURKcVdJdz09'
+goFolderPath = 'https://agaram.a2zweb.in/backend/'
