Live code moved

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT = 5500
 DB_URI = mongodb://localhost:27017/agaram
+#DB_URI = mongodb://13.234.169.84:27017/agaram
 EXPIRE = '12h'
 JWT_SECRET_KEY = 'agaram@klabs'
 chatwayUsername = 'Indiaklabss'
