--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-unless": "^2.1.3",
+    "fs": "^0.0.1-security",
+    "jimp": "^0.16.1",
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
